fixing table overflow

--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -12,6 +12,8 @@
     color: #333;
     text-align: center;
     margin-bottom: 20px;
+    max-width: 100%;
+    overflow-x: auto;
 }
 
 /* Table styling */
@@ -20,6 +22,9 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
+    width: 100%; /* This makes the table take up as much space as it can within its container */
+    border-collapse: collapse; /* This ensures borders are collapsed into a single border */
+    table-layout: fixed; /*  to prevent the table from expanding beyond the width set */
 }
 
 table th,
